[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "process-cae-retriever"
version = "1.0.5"
description = "PyGeoAPI process to retrieve CAE sensor data"
readme = ""
authors = [
  { name="Tommaso Redaelli", email="tommaso.redaelli@gecosistema.com" }
]
license = { text = "MIT" }
keywords = []
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "click",
  "pandas",
  "geopandas",
  "requests",
  "boto3"
]

[project.optional-dependencies]
pygeoapi = [
  "pygeoapi",
]

[project.urls]
Homepage = "https://github.com/saferplaces/process-cae-retriever"

[project.scripts]
cae-retriever = "process_cae_retriever.main:cli_run_cae_retriever"
cae_retriever = "process_cae_retriever.main:cli_run_cae_retriever"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]